# auracode

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GEMINI.md  MANIFEST.in  README.md  auracode.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: closure-report-auracode-fmoe.md  reflection-gate-auracode-1.md  reflection-gate-auracode-2.md
scripts/: gen_grpc.py  specialize_model.py
src/auracode/: __init__.py  app.py  cli.py  errors.py  mcp_server.py  telemetry_config.py
src/auracode/adapters/: __init__.py  base.py  loader.py
src/auracode/adapters/aider/: __init__.py  adapter.py  cli.py  formatter.py
src/auracode/adapters/claude_code/: __init__.py  adapter.py  cli.py  formatter.py
src/auracode/adapters/codestral/: __init__.py  adapter.py  cli.py  formatter.py
src/auracode/adapters/copilot/: __init__.py  adapter.py  cli.py  formatter.py
src/auracode/adapters/openai_shim/: __init__.py  adapter.py
src/auracode/adapters/opencode/: __init__.py  adapter.py  formatter.py
src/auracode/engine/: __init__.py  core.py  preferences.py  registry.py  resume.py  session.py
src/auracode/grid/: __init__.py  client.py  failover.py  messages.py  serializer.py
src/auracode/grid/_generated/: __init__.py
src/auracode/grid/proto/: auracode_grid.proto
src/auracode/models/: __init__.py  config.py  context.py  normalization.py  preferences.py  request.py
src/auracode/repl/: __init__.py  commands.py  console.py
src/auracode/routing/: __init__.py  artifacts.py  base.py  embedded.py  intent_map.py  mcp_catalog.py
src/auracode/shim/: __init__.py  ide_protocol.py  ide_tools.py  ide_websocket.py  middleware.py  models_endpoint.py  openai_compat.py  server.py
src/auracode/util/: logging.py
src/auracode/utils/: journal.py
tests/: conftest.py  test_artifact_consumer.py  test_context_thresholding.py  test_engine.py  test_fmoe_integration.py  test_lint.py  test_mcp_server.py  test_models.py  test_preferences.py  test_routing_context_adoption.py  test_telemetry_config.py
tests/test_adapters/: conftest.py  test_aider.py  test_claude_cli_wiring.py  test_claude_code.py  test_codestral.py  test_copilot.py  test_loader.py  test_openai_shim.py  test_opencode.py
tests/test_fmoe_models/: test_execution_policy.py
tests/test_grid/: conftest.py  test_client.py  test_failover.py  test_failover_catalog.py  test_grpc_transport.py  test_serializer.py
tests/test_integration/: conftest.py  test_bootstrap.py  test_catalog_integration.py  test_cli.py  test_full_path.py  test_full_stack.py  test_ide_streaming.py  test_protocol_conformance.py
tests/test_repl/: conftest.py  test_commands.py  test_console.py
tests/test_routing/: conftest.py  test_catalog_methods.py  test_embedded.py  test_intent_map.py  test_mcp_catalog.py  test_routing_hints.py
tests/test_shim/: __init__.py  conftest.py  test_ide_protocol.py  test_ide_websocket.py  test_models_endpoint.py  test_openai_compat.py  test_server.py
